# sensible-bmi

./: .pre-commit-config.yaml  AUTHORS.md  LICENSE.md  README.md  noxfile.py  pyproject.toml  requirements-docs.in
.github/workflows/: ci.yml  test.yml
docs/: conf.py  index.md  install.md
docs/examples/: bmi-heat.ipynb  bmi-soilgrids.ipynb  bmi-topography.ipynb  bmi-wavewatch3.ipynb  heat.yaml  topography.yaml  wavewatch3.toml
src/sensible_bmi/: _errors.py  _grid.py  _time.py  _utils.py  _validators.py  _var.py  _version.py  sensible_bmi.py
testing/: grids.py  my_bmi.py
tests/: grid_test.py  sensible_bmi_test.py  time_test.py  utils.py  validators_test.py  var_test.py
